add meal type, time and portion attributes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="btnChop">Chops</string>
     <string name="btnChoco">Choco</string>
     <string name="btnTBD">TBD</string>
+    <string name="listMealType">Meal Type</string>
 </resources>
